--- a/Q1 Cloud Automation Concepts/Assessment Assignment 1/2. EFSStack/cac_aa1_efs.yml
+++ b/Q1 Cloud Automation Concepts/Assessment Assignment 1/2. EFSStack/cac_aa1_efs.yml
@@ -8,7 +8,7 @@
 #   8 8888        ,88' 8 8888        8b   `8.`8888. `8 8888       .8' 8 8888 `8b.      8 8888 8 8888             8 8888        8 8888 `8 8888       ,8P  8      `Y8o. `Y8
 #   8 8888    ,o88P'   8 8888        `8b.  ;8.`8888    8888     ,88'  8 8888   `8b.    8 8888 8 8888             8 8888        8 8888  ` 8888     ,88'   8         `Y8o.`
 #   8 888888888P'      8 888888888888 `Y8888P ,88P'     `8888888P'    8 8888     `88.  8 8888 8 8888             8 8888        8 8888     `8888888P'     8            `Yo
-Description: This CloudFormation stack deploys an Elastic File System and mount targets to facilitate daily logs storage. 
+Description: This is Stack 02 of Cloud Engineering\Cloud Automation Concepts\Assessment 01 | EFSStack | This CloudFormation stack deploys an Elastic File System and mount targets to facilitate daily logs storage. 
 
 
 
@@ -35,7 +35,8 @@ Resources:
   #Par = Parameter
   #Imp = Imported parameter
 
-  #Description: This is a Security Group, this is used by the EFS file system and allows all incomming tcp packets from port 2049 (Used for what?) and allows all outgoing packets from all ports.
+  #Description: This is a Security Group, this is used by the EFS file system and allows all incomming tcp packets from port 2049 (Used for accessing the mount targets) 
+  #             and allows all outgoing packets from all ports.
   CACAA1EFSSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -49,33 +50,34 @@ Resources:
       Tags: 
         - Key: Name
           Value: CACAA1EFSSecurityGroup
-      VpcId: !ImportValue BaseStack:VPC                                   #Imp: BaseStack:VPC               (The VPC imported from the BaseStack)
+      VpcId: !ImportValue BaseStack:VPC                                   #Imp: BaseStack:VPC                       (The VPC imported from the BaseStack)
 
-  #Description: This is the EFS File System, this is configgered to use bursting throughput which means (what does this mean?)
+  #Description: This is the EFS File System, this is configgered to use bursting throughput which means the maximum amount of data troughput scales with the amount of
+  #             data stored but the minimum troughput is 100 MiB/s.
   CACAA1EFSFileSystem:
     Type: AWS::EFS::FileSystem
     Properties:
       ThroughputMode: bursting
   
-  #A mount target for the first public subnet
-  #Description: This is a EFS Mount Tagret, this is used to connect the EFS file system to the first of the two public subnets to (do what?)
+  #Description: This is a EFS Mount Tagret, this will be created in the first of the two public subnets functioning as a connection to the EFS file system, 
+  #             allowing the EFS to be accessed by instances in that subnet, in this case the mount target will be used by the webservers to stor log files.
   CACAA1EFSMountTarget1:
     Type: AWS::EFS::MountTarget
     Properties:
-      FileSystemId: !Ref CACAA1EFSFileSystem                              #DO: CACAA1EFSFileSystem          (The EFS File System)
+      FileSystemId: !Ref CACAA1EFSFileSystem                              #DO: CACAA1EFSFileSystem                  (The EFS File System)
       SecurityGroups: 
-        - !Ref CACAA1EFSSecurityGroup                                     #DO: CACAA1EFSSecurityGroup       (The security group for the Elastic File System)
-      SubnetId: !ImportValue BaseStack:PublicSubnet1                      #Imp: BaseStack:PublicSubnet1     (The first public subnet imported from the BaseStack)
+        - !Ref CACAA1EFSSecurityGroup                                     #DO: CACAA1EFSSecurityGroup               (The security group for the Elastic File System)
+      SubnetId: !ImportValue BaseStack:PublicSubnet1                      #Imp: BaseStack:PublicSubnet1             (The first public subnet imported from the BaseStack)
 
-  #A mount target for the second public subnet
-  #Description: This is a EFS Mount Tagret, this is used to connect the EFS file system to the first of the second public subnets to (do what?)
+  #Description: This is a EFS Mount Tagret, this will be created in the second of the two public subnets functioning as a connection to the EFS file system, 
+  #             allowing the EFS to be accessed by instances in that subnet, in this case the mount target will be used by the webservers to stor log files.
   CACAA1EFSMountTarget2:
     Type: AWS::EFS::MountTarget
     Properties:
-      FileSystemId: !Ref CACAA1EFSFileSystem                              #DO: CACAA1EFSFileSystem          (The EFS File System)
+      FileSystemId: !Ref CACAA1EFSFileSystem                              #DO: CACAA1EFSFileSystem                  (The EFS File System)
       SecurityGroups: 
-        - !Ref CACAA1EFSSecurityGroup                                     #DO: CACAA1EFSSecurityGroup       (The security group for the Elastic File System)
-      SubnetId: !ImportValue BaseStack:PublicSubnet2                      #Imp: BaseStack:PublicSubnet2     (The second public subnet imported from the BaseStack)
+        - !Ref CACAA1EFSSecurityGroup                                     #DO: CACAA1EFSSecurityGroup               (The security group for the Elastic File System)
+      SubnetId: !ImportValue BaseStack:PublicSubnet2                      #Imp: BaseStack:PublicSubnet2             (The second public subnet imported from the BaseStack)
 
 
 
@@ -98,26 +100,38 @@ Resources:
 #       `8888888P'        `Y88888P'         8 8888       8 8888            `Y88888P'         8 8888     `Y8888P ,88P' 
 Outputs:
   
+  #Description: This outputs a reffernce to the SecurityGroup used by the EFS.
+  #This value is used in the stacks:
+  # -
   EFSSecurityGroupRef:
     Description: Reference to the security group for EFS
     Value: !Ref CACAA1EFSSecurityGroup
     Export:
-      Name: EfsStack:EFSSecurityGroup
-      
+      Name: EFSStack:EFSSecurityGroup
+  
+  #Description: This outputs a reffernce to the Elastic File System.
+  #This value is used in the stacks:
+  # -
   EFSFileSystemRef:
     Description: Reference to the elastic file system 
     Value: !Ref CACAA1EFSFileSystem
     Export:
-      Name: EfsStack:EFSFileSystem
+      Name: EFSStack:EFSFileSystem
 
+  #Description: This outputs a reffernce to the EFS Mount Target in the first of the four subnets and the first of the two public subnets.
+  #This value is used in the stacks:
+  # -
   EFSMountTarget1Ref:
     Description: Reference to the first mount target public subnet 1
     Value: !Ref CACAA1EFSMountTarget1
     Export:
-      Name: EfsStack:EFSMountTarget1
-
+      Name: EFSStack:EFSMountTarget1
+  
+  #Description: This outputs a reffernce to the EFS Mount Target in the second of the four subnets and the second of the two public subnets.
+  #This value is used in the stacks:
+  # -
   EFSMountTarget2Ref:
     Description: Reference to the second mount target public subnet 2
     Value: !Ref CACAA1EFSMountTarget2
     Export:
-      Name: EfsStack:EFSMountTarget2
+      Name: EFSStack:EFSMountTarget2
