--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_1/3-DataLayerStack/aa1_data_layer_stack.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_1/3-DataLayerStack/aa1_data_layer_stack.yml
@@ -204,6 +204,25 @@ Resources:
             return response;
           };
   
+
+  # Cannot deploy event rules in AWS Educate environment, but this will work for the actual environment
+  # CACAA1RefreshCovidDataEventRule:
+  #   Type: AWS::Events::Rule
+  #   Properties: 
+  #     Description: This event rule runs every 1 hour invoking the Lambda function that pushes updated covid data to MongoDB from git repo of Broad Institute
+  #     Name: CACAA1RefreshCovidDataEventRule
+  #     RoleArn: String
+  #     ScheduleExpression: rate(1 hour)
+  #     State: ENABLED
+  #     Targets: 
+  #       - 
+  #         Arn: 
+  #           Fn::GetAtt: 
+  #             - "CACAA1MongoDBDataRefresher"
+  #             - "Arn"
+  #         Id: "TargetFunctionV1"
+
+
   #Description: This is a Lambda function, the prupouse of this function is to retrieve data from the MongoDB database, this function is used by CACAA1CovidAPI ApiGateway RestApi, 
   #             to ptovide data to (HERE!: Is this entierly the case?)
   CACAA1MongoDBDataRetriever:
@@ -260,7 +279,8 @@ Resources:
   CACAA1APIResource:
     Type: AWS::ApiGateway::Resource
     Properties:
-      ParentId: Fn::GetAtt: [ CACAA1CovidAPI, "RootResourceId" ]          #DO: CACAA1CovidAPI                       (Get RootResourceId of the CACAA1CovidAPI ApiGateway RestApi)
+      ParentId: 
+        Fn::GetAtt: [ CACAA1CovidAPI, "RootResourceId" ]          #DO: CACAA1CovidAPI                       (Get RootResourceId of the CACAA1CovidAPI ApiGateway RestApi)
       PathPart: 'CACAA1MongoDBDataRetriever'
       RestApiId: !Ref CACAA1CovidAPI                                      #DO: CACAA1CovidAPI                       (This is the CACAA1CovidAPI ApiGateway RestApi)
 
@@ -281,6 +301,35 @@ Resources:
       OperationName: 'lambda'
       ResourceId: !Ref CACAA1APIResource                                  #DO: CACAA1APIResource                    (This is the CACAA1APIResource ApiGateway Resoruce)
       RestApiId: !Ref CACAA1CovidAPI                                      #DO: CACAA1CovidAPI                       (This is the CACAA1CovidAPI ApiGateway RestApi)
+
+  CACAA1CORSOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: NONE
+      RestApiId: !Ref CACAA1CovidAPI
+      ResourceId: !Ref CACAA1APIResource
+      HttpMethod: OPTIONS
+      Integration:
+        IntegrationResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+            method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS,GET'"
+            method.response.header.Access-Control-Allow-Origin: "'*'"
+          ResponseTemplates:
+            application/json: ''
+        PassthroughBehavior: WHEN_NO_MATCH
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+        Type: MOCK
+      MethodResponses:
+      - StatusCode: 200
+        ResponseModels:
+          application/json: 'Empty'
+        ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: false
+            method.response.header.Access-Control-Allow-Methods: false
+            method.response.header.Access-Control-Allow-Origin: false
 
   #Description: 
   CACAA1APIGatewayModel:
@@ -346,37 +395,37 @@ Outputs:
     Description: Reference to the security group for MongoDB
     Value: !Ref CACAA1MongoDBSecurityGroup
     Export:
-      Name: DataStack01:MongoDBSecurityGroup
+      Name: DataLayerStack:MongoDBSecurityGroup
 
   LambdaVPCSecurityGroupRef:
     Description: Reference to the security group for VPC connected Lambdas
     Value: !Ref CACAA1LambdaVPCSecurityGroup
     Export:
-      Name: DataStack01:LambdaVPCSecurityGroup
+      Name: DataLayerStack:LambdaVPCSecurityGroup
 
   MongoDBPrimaryInstanceRef:
     Description: Reference to the primary MongoDB instance
     Value: !Ref CACAA1MongoDBInstancePrimary
     Export:
-      Name: DataStack01:MongoDBPrimaryInstance
+      Name: DataLayerStack:MongoDBPrimaryInstance
 
   LambdaExecutionRoleRef:
     Description: Reference to the execution role used by Lambdas
     Value: !Ref CACAA1LambdaBasicRole
     Export:
-      Name: DataStack01:LambdaExecutionRole
+      Name: DataLayerStack:LambdaExecutionRole
 
   LambdaDataRefresherFunctionRef:
     Description: Reference to the Lambda function resposible for refreshing the covid data in MongoDB
     Value: !Ref CACAA1MongoDBDataRefresher
     Export:
-      Name: DataStack01:LambdaDataRefresherFunction
+      Name: DataLayerStack:LambdaDataRefresherFunction
 
   LambdaDataRetrieverFunctionRef:
     Description: Reference to the Lambda function resposible for retrieving the covid data from MongoDB
     Value: !Ref CACAA1MongoDBDataRetriever
     Export:
-      Name: DataStack01:LambdaDataRetrieverFunction
+      Name: DataLayerStack:LambdaDataRetrieverFunction
 
   CovidDataAPIEndpointURL:
     Description: The URL of the API endpoint that allows to retrieve Covid data
